--- a/Jenkins/app.json
+++ b/Jenkins/app.json
@@ -4,7 +4,7 @@
     "website": "https://jenkins.io/",
     "license": "MIT License",
     "description": "Jenkins is an open source automation server with an unparalleled plugin ecosystem to support practically every tool as part of your delivery pipelines.",
-    "enhanced": false,
+    "enhanced": true,
     "tile_background": "light",
     "icon": "jenkins.png"
 }
